--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
   <br>
   <a href="Politicadeprivacidade.html" target="_blank">Política de Privacidade</a> |
-  <a href="Declaracaodeprivacidade.html" target="_blank">Declaração de Privacidade</a>
+  <a href="https://kaw77.github.io/declaracaodeprivacidade/" target="_blank">Declaração de Privacidade</a>
 
   <footer>
     <p>Ao clicar em <strong>"Enviar e Receber PDF"</strong>, você concorda com nossa Política de Privacidade e Declaração de Privacidade.</p>
