--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
   <div id="response"></div>
 
   <br>
-  <a href="Politicadeprivacidade.html" target="_blank">Política de Privacidade</a> |
+  <a href="https://kaw77.github.io/politicadepriv/" target="_blank">Política de Privacidade</a> |
   <a href="https://kaw77.github.io/declaracaodeprivacidade/" target="_blank">Declaração de Privacidade</a>
 
   <footer>
