--- a/index.html
+++ b/index.html
@@ -75,7 +75,8 @@
   <a href="https://kaw77.github.io/declaracaodeprivacidade/" target="_blank">Declaração de Privacidade</a>
 
   <footer>
-    <p>Ao clicar em <strong>"Enviar e Receber PDF"</strong>, você concorda com nossa Política de Privacidade e Declaração de Privacidade.</p>
+    <p>Ao clicar em <strong>"Enviar e Receber PDF"</strong>, você concorda com nossa Política de Privacidade e Declaração de Privacidade.</p><br>
+     <p>Cogite verificar também sua caixa de SPAM.</p>
   </footer>
 
   <script>
